# afft

./: CMakeLists.txt  README.md
cmake/: afftConfig.cmake.in
include/afft/: bit_reversal_primitives.hpp  bit_reversal_prototypes.hpp  common_math.hpp  convolution_real.hpp  execute.hpp  fft_complex.hpp  fft_real.hpp  fft_real_impl.hpp  log_n_samples_per_operand.hpp  new_fft_complex.hpp  radix_primitives.hpp  spec.hpp
include/afft/bit_reverse_permutation/: bit_rev_perm.hpp  bit_rev_perm_impl.hpp  bit_rev_perm_plan.hpp  bit_rev_perm_plan_type.hpp  plan_indexes_manipulation.hpp
include/afft/butterfly/: butterfly.hpp  butterfly_impl.hpp  butterfly_partitioning.hpp  butterfly_plan.hpp  iterative_butterfly_plan.hpp  twiddles.hpp
include/afft/fft/: fft_complex.hpp
include/afft/old/: convolution_real.hpp  fft_complex.hpp
include/afft/operations/: ct_radix2.hpp  s_radix2.hpp  s_radix2_impl.hpp  s_radix4.hpp  s_radix4_impl.hpp
include/afft/plan/: bit_reverse_permute.hpp  butterfly.hpp  plan_fft_complex.hpp  twiddles.hpp
include/afft/radix/: compound_radix_twiddle_loader.hpp  ct_radix2.hpp  ct_radix4.hpp  difreq_compound_radix2.hpp  difreq_compound_radix4.hpp  difreq_final2.hpp  difreq_final4.hpp  difreq_radix2.hpp  difreq_radix4.hpp  ditime_compound_radix2.hpp  ditime_compound_radix4.hpp  ditime_init2.hpp  ditime_init4.hpp  ditime_radix2.hpp  ditime_radix4.hpp  load_edge_tw.hpp  radix_stage.hpp  radix_type.hpp  s_radix2.hpp  s_radix2_impl.hpp  s_radix2_interleave.hpp  s_radix2_no_interleave.hpp  s_radix4.hpp  s_radix4_impl.hpp  s_radix4_interleave.hpp  s_radix4_no_interleave.hpp
include/afft/radix/old_radix/: fft_len2.hpp  radix2_difreq_final_edge.hpp  radix2_difreq_regular_core.hpp  radix2_ditime_init_core.hpp  radix4_difreq_final.hpp  radix4_difreq_regular_core.hpp  radix4_difreq_regular_edge.hpp  radix4_ditime_init.hpp  radix4_ditime_regular_core.hpp  radix4_ditime_regular_edge.hpp
include/afft/radix/radix_params/: ct_radix2_params.hpp  ct_radix4_params.hpp  log_interleave_permute.hpp  radix_params.hpp  s_radix2_params.hpp  s_radix4_params.hpp
include/afft/radix/radix_stage/: radix_stage.hpp  radix_type.hpp
include/afft/radix_primitives/: radix2_ditime_regular_core.hpp  radix4_difreq_regular_edge.hpp
include/afft/spec/: bounded_spec.hpp  double2_sse2_spec.hpp  double4_avx2_spec.hpp  std_spec.hpp  val_array_spec.hpp
include/afft/stage/: stage.hpp  stage_type.hpp
include/afft/stage/stage_params/: ct_radix2_params.hpp  ct_radix4_params.hpp  log_interleave_permute.hpp  s_radix_params.hpp  stage_params.hpp
src/: PGFFT.h  RunTmChk.c  afft.hpp  fft_complex.hpp  fft_real.hpp  main.cpp  spec.hpp
